--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-fixture/volumes/env
-fixture/volumes/hostname
-fixture/volumes/hosts
-fixture/volumes/resolv.conf
+test/fixture/volumes/env/
+test/fixture/volumes/hostname
+test/fixture/volumes/hosts
+test/fixture/volumes/resolv.conf
