--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - WORKDIR
     volumes:
       - env:$WORKDIR
-      - ./test/fixture/volumes/aws-secret:$WORKDIR/secret
-      - ./test/fixture/volumes/aws-parameter-store:$WORKDIR/ssm
+      - ./test/fixture/volumes/aws-secret:$WORKDIR/aws-secret
+      - ./test/fixture/volumes/aws-parameter-store:$WORKDIR/aws-parameter-store
   validator:
     depends_on: [ env-loader ]
     build:
