--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       context: ./test
     environment:
       - WORKDIR
+      - APPLICATION_NAME
     volumes:
       - env:$WORKDIR
       - ./test/expectation:/expectation
