--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       context: .
     environment:
       - WORKDIR
+      - APPLICATION_NAME
     volumes:
       - env:$WORKDIR
       - ./test/fixture/volumes/aws-secret:$WORKDIR/aws-secret
