--- a/opslevel.yaml
+++ b/opslevel.yaml
@@ -3,14 +3,14 @@
 version: 1
 service:
   name: config-parser
-  lifecycle: alpha
-  owner: infrastructure-core
+  lifecycle: generally_available
+  owner: sre
   language: bash
   description: |-
-    Library in charge parsing config files
+    Library in charge of parsing config files
   repositories:
     - name: pleo-io/config-parser
-      path: "/"
+      path: '/'
       provider: github
   tags:
     - key: type
